# centro-comercial-monitor

./: CMakeLists.txt  README.md  app_config.h  cloud_sync.c  cloud_sync.h  dht22.c  dht22.h  index.html  main.c  sensors.c  sensors.h  wifi_manager.c  wifi_manager.h
mnt/user-data/outputs/esp32_comercial/: CMakeLists.txt
